force-app/main/default/objects/Contact/fields/SIIndex__c.field-meta.xml
<CustomField>
    <fullName>SIIndex__c</fullName>
    <description>Used for Wellness</description>
    <label>SIIndex</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
                <default>true</default>
                <label>Individual</label>
            </value>
            <value>
                <fullName>Multiple Applicant</fullName>
            </value>
            <value>
                <fullName>Family Floater</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>