force-app/main/default/objects/Contact/fields/Spouse_Name__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Name__c</fullName>
    <description>This field is used to store the spouse name od the contact</description>
    <label>Spouse Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>