force-app/main/default/objects/Contact/fields/Voter_Id__c.field-meta.xml
<CustomField>
    <fullName>Voter_Id__c</fullName>
    <description>This field is used to store the voter id number of the contact</description>
    <label>Voter Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>