force-app/main/default/objects/Contact/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Weight (KG)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>