force-app/main/default/objects/Contact/fields/WeightKg__c.field-meta.xml
<CustomField>
    <fullName>WeightKg__c</fullName>
    <description>This field is used in Multiply (Wellness) CRM</description>
    <label>Weight (Kg)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>